logging/exceptions.log
2020-03-16T06:18:12.689Z error: uncaughtException: Unexpected token )
/Users/lambda/Desktop/businessDate-microservices/pubsub/pubsub.js:47
        callback: (data) =>res.status(200).json({ ok: true, ...data )
                                                                    ^

SyntaxError: Unexpected token )
    at Module._compile (internal/modules/cjs/loader.js:872:18)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
    at Function.Module._load (internal/modules/cjs/loader.js:703:12)
    at Module.require (internal/modules/cjs/loader.js:830:19)
    at require (internal/modules/cjs/helpers.js:68:18)
    at Object.<anonymous> (/Users/lambda/Desktop/businessDate-microservices/pubsub/router.js:3:16)
    at Module._compile (internal/modules/cjs/loader.js:936:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:947:10)
    at Module.load (internal/modules/cjs/loader.js:790:32)
